--- a/rowcol_KemptonFox1997.Rmd
+++ b/rowcol_KemptonFox1997.Rmd
@@ -214,3 +214,24 @@ ggplot() +
   theme_classic() + # clearer plot format 
   theme(axis.text.x = element_text(angle=90, vjust=0.5)) # rotate x-axis label
 ```
+
+# Exercises
+
+## Exercise 1
+This example is taken from *"Example 8"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data from a yield trial with oat. There were 64 genotypes laid out as a 8 x 8 lattice with 3 replicates.
+
+* Explore
+  + Which genotypes have missing yield observations?
+  + Create a field trial layout using ´desplot()´ where the plots are filled according to their yield. Try to see whether some areas have lower/higher yields.  
+* Analyze
+  + Set up the model with random incomplete block effects.
+  + Extract the variance components.
+  + Compute an ANOVA 
+  + Perform multiple (mean) comparisons using the LSD test/t-test.
+
+```{r, warning=FALSE, message=FALSE}
+# data (import via URL)
+dataURL <- "https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/data/RowColFromUtz.csv"
+ex1dat <- read_csv(dataURL)
+```
+
