--- a/augmented_Pattersen1994.Rmd
+++ b/augmented_Pattersen1994.Rmd
@@ -18,7 +18,7 @@ pacman::p_load(purrr)
 ```{r, message=FALSE, warning=FALSE}
 # packages
 pacman::p_load(janitor, readr, tidyverse, # data import and handling
-               lme4,                      # linear mixed model 
+               lme4, lmerTest,            # linear mixed model 
                emmeans, multcomp,         # mean comparisons
                ggplot2, desplot)          # plots 
 ```
