--- a/0contactinfo.Rmd
+++ b/0contactinfo.Rmd
@@ -105,14 +105,14 @@ GerFlagURL <- "https://cdn.countryflags.com/thumbs/germany/flag-round-250.png"
 USAFlagURL <- "https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png"
 
 LangFlags <- workshops %>% 
-  select(Language) %>% 
+  dplyr::select(Language) %>% 
   mutate(LangURL = case_when(Language == "Ger" ~ GerFlagURL,
                              Language == "Eng" ~ USAFlagURL,
                              T ~ NA_character_)) %>% 
   pull(LangURL)
 
 workshops %>% 
-  select(-URL) %>% 
+  dplyr::select(-URL) %>% 
   kbl() %>%
   kable_minimal(full_width = T, font_size = 10, 
                 bootstrap_options = c("hover", "condensed")) %>% 
