--- a/augmented_Pattersen1994.Rmd
+++ b/augmented_Pattersen1994.Rmd
@@ -25,7 +25,7 @@ pacman::p_load(janitor, readr, tidyverse, # data import and handling
 
 # Data
 
-This example is taken from Chapter *"3.7 Analysis of a non-resolvable augmented design"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [Peterson (199)](https://www.taylorfrancis.com/books/9780429078491){target="_blank"} from a yield trial laid out as an augmented design. The genotypes (`gen`) include 3 standards (`st`, `ci`, `wa`) and 30 new cultivars of interest. The trial was laid out in 6 blocks (`block`). The 3 standards are tested in each block, while each entry is tested in only one of the blocks. Therefore, the blocks are *"incomplete blocks"*.
+This example is taken from Chapter *"3.7 Analysis of a non-resolvable augmented design"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [Peterson (1994)](https://www.taylorfrancis.com/books/9780429078491){target="_blank"} from a yield trial laid out as an augmented design. The genotypes (`gen`) include 3 standards (`st`, `ci`, `wa`) and 30 new cultivars of interest. The trial was laid out in 6 blocks (`block`). The 3 standards are tested in each block, while each entry is tested in only one of the blocks. Therefore, the blocks are *"incomplete blocks"*.
 
 ## Import
 
@@ -47,16 +47,18 @@ dat <- dat %>%
 
 ## Exploring
 
-In order to obtain a field layout of the trial, we can use the `desplot()` function. Notice that for this we need two data columns that identify the `row` and `column` of each plot in the trial. 
+In order to obtain a field layout of the trial, we can use the `desplot()` function. Notice that for this we need two data columns that identify the `row` and `column` of each plot in the trial. Notice that for this example it makes sense to put in some extra effort to explicitly assign colors to the genotypes in a way that differentiates the standards (`st`, `ci`, `wa`) from all other genotypes.
 
-Notice that for this example it makes sense to put in some extra effort to explicitly assign colors to the genotypes in a way that differntiates the standards (`st`, `ci`, `wa`) from the other genotypes.
-
-```{r, fig.height = 5, fig.align = "center"}
+```{r, fig.height = 5, fig.width = 3, fig.align = "center"}
 # create a color-generating function
 get_shades_of_blue <- colorRampPalette(colors=c("skyblue", "royalblue4"))
 blue_30  <- get_shades_of_blue(30) # 30 shades of blue
 orange_3 <- c("darkorange", "darkorange2", "darkorange3") # 3 shades of orange
-blue_30_and_orange_3 <- c(blue_30, orange_3) # combine into single vector                  
+blue_30_and_orange_3 <- c(blue_30, orange_3) # combine into single vector   
+
+# name this vector of colors with genotype names
+names(blue_30_and_orange_3) <- dat %>% 
+  pull(gen) %>% as.character() %>% sort %>% unique
 
 desplot(data = dat,
         form = gen ~ col + row, # fill color per genotype, headers per replicate
@@ -170,6 +172,23 @@ mean_comparisons$emmeans # adjusted genotype means
 ## Mean comparisons
 
 For this example we can create a plot that displays both the raw data and the results, *i.e.* the comparisons of the adjusted means that are based on the linear model.
+
+```{r}
+# genotypes ordered by mean yield
+gen_order_emmean <- mean_comparisons$emmeans %>% 
+  arrange(emmean) %>% 
+  pull(gen) %>% 
+  as.character()
+
+# assign this order to emmeans object
+mean_comparisons$emmeans <- mean_comparisons$emmeans %>% 
+  mutate(gen = fct_relevel(gen, gen_order_emmean))
+
+# assign this order to dat object
+dat <- dat %>% 
+  mutate(gen = fct_relevel(gen, gen_order_emmean))
+```
+
 
 ```{r}
 ggplot() +
