--- a/CRD_Mead1993.Rmd
+++ b/CRD_Mead1993.Rmd
@@ -95,13 +95,11 @@ mod <- lm(yield ~ variety, data = dat)
 
 ## ANOVA
 
-Moreover, we can conduct an ANOVA for this model.
+Thus, we can conduct an ANOVA for this model. As can be seen, the F-test of the ANOVA finds the `variety` effects to be statistically significant (p`r anova(mod)["variety", "Pr(>F)"] %>% format.pval(pv = ., eps = .001, digits = 2)`). 
 
 ```{r, warning=FALSE, message=FALSE}
 mod %>% anova()
 ```
-
-As can be seen, the F-test finds the `variety` effects to be statistically significant (p = `r anova(mod)["variety", "Pr(>F)"] %>% round(8) %>% format(scientific=FALSE)` < 0.05). 
 
 ## Mean comparisons
 
