--- a/latsquare_Bridges1989.Rmd
+++ b/latsquare_Bridges1989.Rmd
@@ -109,13 +109,11 @@ mod <- lm(yield ~ gen + rowF + colF, data = dat)
 
 ## ANOVA
 
-Moreover, we can conduct an ANOVA for this model.
+Thus, we can conduct an ANOVA for this model. As can be seen, the F-test of the ANOVA finds the `gen` effects to be statistically significant (p = `r anova(mod)["gen", "Pr(>F)"] %>% format.pval(pv = ., eps = .001, digits = 2)` < 0.05). 
 
 ```{r}
 mod %>% anova()
 ```
-
-As can be seen, the F-test finds the `gen` effects to be statistically significant (p = `r anova(mod)["gen", "Pr(>F)"] %>% round(3)` < 0.05). 
 
 ## Mean comparisons
 
