--- a/rowcol_KemptonFox1997.Rmd
+++ b/rowcol_KemptonFox1997.Rmd
@@ -108,12 +108,11 @@ mod.fb <- lm(yield ~ gen + rep +
 
 mod.fb %>%
   emmeans(pairwise ~ "gen",
-          adjust = "tukey",
-          lmer.df = "kenward-roger") %>%
+          adjust = "tukey") %>%
   pluck("contrasts") %>% # extract diffs
   as_tibble %>% # format to table
   pluck("SE") %>% # extract s.e.d. column
-  mean # get arithmetic mean
+  mean() # get arithmetic mean
 ```
 </div> <div class = "col-md-6">
 ```{r, warning=FALSE, message=FALSE}
@@ -130,7 +129,7 @@ mod.rb %>%
   pluck("contrasts") %>% # extract diffs
   as_tibble %>% # format to table
   pluck("SE") %>% # extract s.e.d. column
-  mean # get arithmetic mean
+  mean() # get arithmetic mean
 ```
 </div> </div>
 
@@ -138,13 +137,11 @@ As a result, we find that the model with random row and column effects has the s
 
 ## ANOVA
 
-Thus, we can conduct an ANOVA for this model.
+Thus, we can conduct an ANOVA for this model. As can be seen, the F-test of the ANOVA (using Kenward-Roger’s method for denominator degrees-of-freedom and F-statistic) finds the `gen` effects to be statistically significant (p = `r anova(mod.rb, ddf="Kenward-Roger")["gen", "Pr(>F)"] %>% format.pval(pv = ., eps = .001, digits = 2)` < 0.05). 
 
 ```{r}
-mod.rb %>% anova()
+mod.rb %>% anova(ddf="Kenward-Roger")
 ```
-
-As can be seen, the F-test finds the `gen` effects to be statistically significant (p = `r anova(mod.rb)["gen", "Pr(>F)"] %>% round(4)` < 0.05). 
 
 ## Mean comparisons
 
